// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`A.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
require('./C');

=====================================output=====================================
require("./C");

================================================================================
`;

exports[`B.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
require('./C');

=====================================output=====================================
require("./C");

================================================================================
`;

exports[`C.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
require('./D');
require('./E');
require('./F');
require('./G');

=====================================output=====================================
require("./D");
require("./E");
require("./F");
require("./G");

================================================================================
`;

exports[`D.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
require('./I');

=====================================output=====================================
require("./I");

================================================================================
`;

exports[`E.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
require('./I');

=====================================output=====================================
require("./I");

================================================================================
`;

exports[`F.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
// empty

=====================================output=====================================
// empty

================================================================================
`;

exports[`G.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
require('./H');

=====================================output=====================================
require("./H");

================================================================================
`;

exports[`H.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
// empty

=====================================output=====================================
// empty

================================================================================
`;

exports[`I.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
require('./A');

=====================================output=====================================
require("./A");

================================================================================
`;
